refactor: use `package-info.java`